--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,2 +1,61 @@
+.header{
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 6rem;
+    z-index: 100;
+    position: sticky;
+    top: 0;
+    
+}
 
 
+.header__left{
+    display:flex;
+    align-items: center;
+}
+
+.header__left > img{
+    height: 2.5rem;
+}
+
+.header__input {
+    display: flex;
+    align-items:center;
+    background: #bebebe36;
+    margin-left: 2rem;
+    padding: 8px;
+    border: 2px solid #929292;
+    box-sizing: border-box;
+    border-radius: 5px;
+    color: white;
+}
+
+.header__input > input {
+    border: none;
+    background-color: transparent;
+    padding-left: .6rem;
+    padding-right: 6rem;
+    outline-width: 0;
+    color: white;
+    font-size: 1.2rem;
+}
+
+::placeholder{
+    color: white;
+}
+
+.header__right{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.header__option{
+    padding:10px 1.2rem;
+}
+.header__option .link{
+    color: white;
+    font-weight: 500;
+    text-decoration: none;
+    font-size: 1.3rem;
+}
