--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header{
     display: flex;
     justify-content: space-between;
-    padding: 2rem 6rem;
+    padding: 2rem 4rem;
     z-index: 100;
     position: sticky;
     top: 0;
@@ -34,7 +34,7 @@
     border: none;
     background-color: transparent;
     padding-left: .6rem;
-    padding-right: 6rem;
+    padding-right: 2rem;
     outline-width: 0;
     color: white;
     font-size: 1.2rem;
@@ -47,15 +47,15 @@
 .header__right{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
 }
 
 .header__option{
-    padding:10px 1.2rem;
+    padding:10px 10px;
 }
 .header__option .link{
     color: white;
     font-weight: 500;
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
