--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,14 +3,60 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 110vh;
 }
 
 .home::before{
     background: rgba(0, 0, 0, 0.712);
     content: '';
     display: block;
-    height: 100%;
+    height: 110vh;
     position: absolute;
     width: 100%;
   }
+
+.trip__option{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    margin: 2rem 0 5rem 5rem;
+}
+.trip__option .trip__info{
+    width: 450px;
+    color: white;
+}
+
+.trip__option .trip__info >h1{
+    font-size: 4rem;
+}
+
+.trip__option .trip__info >p{
+    font-size: 1.5rem;
+    line-height: 1.3;
+}
+.trip__option .trip__info > .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 9rem;
+    height: 2.5rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    background-color: orange;
+    color: black;
+    border-radius: 5px;
+}
+
+.trip__img{
+    display:flex;
+    margin-right: -3rem;
+}
+
+.trip__img >img{
+    background:cover;
+    width: 12.875rem;
+    height: 22rem;
+    margin: 10px;
+    border-radius: 20px;
+
+}
