--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,3 +1,66 @@
+.orange{
+    color: orange;
+}
+
 .login Header {
     color: black;
 }
+
+.form{
+    text-align: center;
+    width:37rem;
+    border: 1px solid lightgray;
+    margin: auto;
+    padding-bottom: 1rem;
+}
+
+.form >input{
+    width:85%;
+    border: none;
+    border-bottom: 1px solid lightgray;
+    padding: 10px 0;
+    margin: 1rem;
+}
+
+input::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: orange;
+    font-weight: bold;
+    font-size: 1.1rem;
+  }
+  
+  input::-moz-placeholder {
+    /* Firefox 18- */
+    color: orange;
+  }
+
+  .login__options{
+      display: flex;
+      flex-grow: 1;
+  }
+  .login__option{
+      padding: 0 2.6rem;
+  }
+  
+  .login__option__forgot{
+      margin-left: auto;
+      padding-right: 2.7rem;
+      font-weight: bold;
+  }
+
+
+  .form >button{
+    width: 84%;
+    height: 2.9rem;
+    margin:2.4rem 0 0 0;
+    padding: 1rem 0;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    background: orange;
+}
+
+.form p{
+    font-size: 1rem;
+}
+ 
