--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -60,7 +60,42 @@ input::-webkit-input-placeholder {
     background: orange;
 }
 
-.form p{
-    font-size: 1rem;
+
+.or{
+    text-align: center;
+    margin: 2rem;
 }
+
+.or{
+    width:30rem;
+    border-bottom: 1px solid lightgray;
+    margin: auto;
+    padding-top: 2rem;
+}
+
+.another__login_options{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.another__login__option{
+    position: relative;
+    width: 30rem;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    margin: 1rem 0 0 0;
+    border: 1px solid lightgray;
+    border-radius: 100px;
+}
+
+.another__login__option > img{
+    width: 1.5rem;
+    position: absolute;
+    left: 1rem;
+}
+
+
  
