--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -18,15 +18,19 @@
     width:85%;
     border: none;
     border-bottom: 1px solid lightgray;
-    padding: 10px 0;
+    padding: 10px 5px;
     margin: 1rem;
+    outline-width: 0;
+    color: orange;
+    font-weight: bold;
+    font-size: 1rem;
 }
 
 input::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
     color: orange;
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   
   input::-moz-placeholder {
@@ -49,15 +53,10 @@ input::-webkit-input-placeholder {
   }
 
 
-  .form >button{
-    width: 84%;
-    height: 2.9rem;
-    margin:2.4rem 0 0 0;
-    padding: 1rem 0;
-    font-weight: bold;
-    border: none;
+  .form > .button{
     border-radius: 5px;
     background: orange;
+    color: black;
 }
 
 
@@ -89,6 +88,7 @@ input::-webkit-input-placeholder {
     margin: 1rem 0 0 0;
     border: 1px solid lightgray;
     border-radius: 100px;
+    cursor: pointer;
 }
 
 .another__login__option > img{
@@ -97,5 +97,3 @@ input::-webkit-input-placeholder {
     left: 1rem;
 }
 
-
- 
