--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -13,3 +13,20 @@
     height: 188px;
     margin: 1rem 1rem 1rem 0;
 }
+
+.hotel__start{
+    display: flex;
+    justify-content:flex-start;
+    align-items:center;
+}
+
+.hotel__start > img {
+    width:1rem;
+}
+
+.booking__right{
+    width: 500px;
+    height: 700px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+}
