--- a/src/components/Trips/Trips.css
+++ b/src/components/Trips/Trips.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     position: relative;
-    margin: 10rem 0 5rem 5rem;
+    margin: 5rem 0 3rem 5rem;
 }
 .trip__option .trip__info{
     width: 450px;
@@ -30,6 +30,7 @@
     background-color: orange;
     color: black;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .trip__img{
